--- a/app/styles/scss/_content.scss
+++ b/app/styles/scss/_content.scss
@@ -1860,3 +1860,44 @@ sidebar
     transform: scale(1);
   }
 }
+
+.tst-cta-image-wrapper {
+    position: relative;
+    
+    .tst-cta-image {
+        border-radius: 1rem;
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+        filter: brightness(0.8);
+    }
+
+    .tst-cta-badge {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 2;
+        
+        .tst-cta-badge-inner {
+            background: var(--tst-white);
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 1rem;
+            
+            .tst-cta-badge-text {
+                font-size: 1.5rem;
+                font-weight: bold;
+                margin: 0.5rem 0 0.25rem;
+            }
+            
+            .tst-cta-badge-subtext {
+                font-size: 0.875rem;
+                color: var(--tst-primary);
+            }
+        }
+    }
+}
