--- a/app/styles/scss/_checkout.scss
+++ b/app/styles/scss/_checkout.scss
@@ -360,3 +360,65 @@
     padding: 2rem;
     box-shadow: var(--tst-shadow-1);
 }
+
+@media (max-width: 767px) {
+    .tst-cart-total {
+        .tst-discount-section {
+            .tst-code-display {
+                flex-direction: column;
+                align-items: flex-end;
+                gap: 4px;
+            }
+        }
+    }
+
+    .tst-cart-box {
+        padding: 1rem;
+        margin: 0 -1rem;
+        border-radius: 0;
+    }
+
+    .tst-cart-promo {
+        margin: 1rem -1rem;
+        border-radius: 0;
+        
+        &__icon {
+            width: 36px;
+            height: 36px;
+            
+            svg {
+                width: 18px;
+                height: 18px;
+            }
+        }
+        
+        &__message {
+            font-size: 0.8125rem;
+        }
+    }
+
+    .tst-cart-table {
+        .tst-cart-table-header {
+            display: none;
+        }
+
+        .tst-cart-item {
+            .row {
+                flex-direction: column;
+                
+                .col-lg-3 {
+                    text-align: left;
+                    margin-top: 0.5rem;
+                }
+            }
+        }
+    }
+
+    .tst-cart-total {
+        &.tst-cart-total-2 {
+            padding: 1rem;
+            margin: 1rem -1rem;
+            border-radius: 0;
+        }
+    }
+}
